c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/extra_credit/postfix_incr_string.c
// can't apply postfix ++/-- to string literals
int main(void) {
    "foo"++;
    return 0;
}